--- a/1-Natours/css/styles.css
+++ b/1-Natours/css/styles.css
@@ -19,3 +19,15 @@ body {
     line-height: 1.7;
     color: #777;
 }
+
+.header {
+    height: 95vh;
+    background-image: url(../images/hero.jpg);
+}
+
+
+
+
+
+
+
