--- a/1-Natours/css/styles.css
+++ b/1-Natours/css/styles.css
@@ -18,11 +18,19 @@ body {
     font-size: 16px;
     line-height: 1.7;
     color: #777;
+    padding: 30px;
 }
 
 .header {
     height: 95vh;
-    background-image: url(../images/hero.jpg);
+    background-image:
+            linear-gradient(
+                    to right bottom,
+                    rgba(126, 213, 111, .8),
+                    rgba(40, 180, 133, .8))
+    ,url(../images/hero.jpg);
+    background-position: top;
+    clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
 }
 
 
