--- a/1-Natours/css/styles.css
+++ b/1-Natours/css/styles.css
@@ -31,7 +31,7 @@ body {
     ,url(../images/hero.jpg);
     background-position: top;
     clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
-    position: relative;
+    position: relative
 }
 
 .logo-box {
