converted to BEM

--- a/1-Natours/css/styles.css
+++ b/1-Natours/css/styles.css
@@ -36,21 +36,21 @@ body {
     position: relative
 }
 
-.logo-box {
+.header__logo-box {
     position: absolute;
     top: 4rem;
     left: 4rem;
 }
 
-.logo {
+.header__logo {
     height: 3.5rem;
 }
 
-.logo:hover {
+.header__logo:hover {
     animation: moveInRight 1s ease-out;
 }
 
-.text-box {
+.header__text-box {
     position: absolute;
     top: 40%;
     left: 50%;
@@ -65,7 +65,7 @@ body {
     margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
     display: block;
     font-size: 60px;
     font-weight: 400;
@@ -75,7 +75,7 @@ body {
     animation-timing-function: ease-out;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
     display: block;
     font-size: 2rem;
     font-weight: 700;
@@ -150,7 +150,7 @@ body {
     box-shadow: 0 .3rem .7rem rgba(0, 0, 0, .3);
 }
 
-.btn-white {
+.btn--white {
     background-color: white;
     color: #777;
 }
@@ -168,7 +168,7 @@ body {
     transition: all .5s;
 }
 
-.btn-white::after {
+.btn--white::after {
     background-color: white;
 }
 
@@ -177,7 +177,7 @@ body {
     opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
     animation: moveInBottom .5s ease-out .25s;
     animation-fill-mode: backwards;
 }
