Added scss variables

--- a/1-Natours/css/styles.scss
+++ b/1-Natours/css/styles.scss
@@ -1,3 +1,5 @@
+@import './_variables.scss';
+
 /*
     COLORS:
     Light green: #7ed56f
@@ -29,8 +31,8 @@ body {
     height: 95vh;
     background-image: linear-gradient(
             to right bottom,
-            rgba(126, 213, 111, .8),
-            rgba(40, 180, 133, .8)), url(../images/hero.jpg);
+            $light-green,
+            $dark-green), url(../images/hero.jpg);
     background-position: top;
     clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
     position: relative
@@ -59,7 +61,7 @@ body {
 }
 
 .heading-primary {
-    color: #fff;
+    color: $color-primary;
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 6rem;
@@ -151,8 +153,8 @@ body {
 }
 
 .btn--white {
-    background-color: white;
-    color: #777;
+    background-color: $color-primary;
+    color: $color-secondary;
 }
 
 .btn::after {
@@ -169,7 +171,7 @@ body {
 }
 
 .btn--white::after {
-    background-color: white;
+    background-color: $color-primary;
 }
 
 .btn:hover::after {
