--- a/1-Natours/css/styles.css
+++ b/1-Natours/css/styles.css
@@ -138,7 +138,7 @@ body {
 }
 
 .btn--white {
-  background-color: white;
+  background-color: #fff;
   color: #777;
 }
 
@@ -156,7 +156,7 @@ body {
 }
 
 .btn--white::after {
-  background-color: white;
+  background-color: #fff;
 }
 
 .btn:hover::after {
