--- a/1-Natours/css/styles.scss
+++ b/1-Natours/css/styles.scss
@@ -35,29 +35,29 @@ body {
             $dark-green), url(../images/hero.jpg);
     background-position: top;
     clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
-    position: relative
-}
+    position: relative;
 
-.header__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-}
+    .header__logo-box {
+        position: absolute;
+        top: 4rem;
+        left: 4rem;
+    }
 
-.header__logo {
-    height: 3.5rem;
-}
+    .header__logo {
+        height: 3.5rem;
+    }
 
-.header__logo:hover {
-    animation: moveInRight 1s ease-out;
-}
+    .header__logo:hover {
+        animation: moveInRight 1s ease-out;
+    }
 
-.header__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    .header__text-box {
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
 }
 
 .heading-primary {
@@ -65,24 +65,24 @@ body {
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 6rem;
-}
 
-.heading-primary--main {
-    display: block;
-    font-size: 60px;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation-name: moveInLeft;
-    animation-duration: .5s;
-    animation-timing-function: ease-out;
-}
+    .heading-primary--main {
+        display: block;
+        font-size: 60px;
+        font-weight: 400;
+        letter-spacing: 3.5rem;
+        animation-name: moveInLeft;
+        animation-duration: .5s;
+        animation-timing-function: ease-out;
+    }
 
-.heading-primary--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.74rem;
-    animation: moveInRight .5s ease-out;
+    .heading-primary--sub {
+        display: block;
+        font-size: 2rem;
+        font-weight: 700;
+        letter-spacing: 1.74rem;
+        animation: moveInRight .5s ease-out;
+    }
 }
 
 @keyframes moveInLeft {
