--- a/1-Natours/css/styles.css
+++ b/1-Natours/css/styles.css
@@ -31,22 +31,18 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
   position: relative;
 }
-
-.header__logo-box {
+.header .header__logo-box {
   position: absolute;
   top: 4rem;
   left: 4rem;
 }
-
-.header__logo {
+.header .header__logo {
   height: 3.5rem;
 }
-
-.header__logo:hover {
+.header .header__logo:hover {
   animation: moveInRight 1s ease-out;
 }
-
-.header__text-box {
+.header .header__text-box {
   position: absolute;
   top: 40%;
   left: 50%;
@@ -60,8 +56,7 @@ body {
   backface-visibility: hidden;
   margin-bottom: 6rem;
 }
-
-.heading-primary--main {
+.heading-primary .heading-primary--main {
   display: block;
   font-size: 60px;
   font-weight: 400;
@@ -70,8 +65,7 @@ body {
   animation-duration: 0.5s;
   animation-timing-function: ease-out;
 }
-
-.heading-primary--sub {
+.heading-primary .heading-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 700;
