--- a/1-Natours/css/styles.scss
+++ b/1-Natours/css/styles.scss
@@ -5,7 +5,6 @@
     Light green: #7ed56f
     Medium green: #55c57a
     Dark green: #28b485
-
 */
 
 * {
@@ -145,6 +144,7 @@ body {
 .btn:hover {
     transform: translateY(-3px);
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+    background-color: darken($color-primary, 5%);
 }
 
 .btn:active {
