--- a/1-Natours/css/_variables.scss
+++ b/1-Natours/css/_variables.scss
@@ -2,3 +2,14 @@ $color-primary: #fff;
 $color-secondary: #777;
 $light-green: rgba(126, 213, 111, .8);
 $dark-green: rgba(40, 180, 133, .8);
+
+@mixin button-hover {
+  transform: translateY(-3px);
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
+  background-color: darken($color-primary, 5%);
+}
+
+@mixin button-active {
+  transform: translateY(-1px);
+  box-shadow: 0 .3rem .7rem rgba(0, 0, 0, .3);
+}
