--- a/1-Natours/css/_variables.scss
+++ b/1-Natours/css/_variables.scss
@@ -1,17 +1,18 @@
-$color-primary: #fff;
-$color-secondary: #777;
 $light-green: rgba(126, 213, 111, .8);
 $dark-green: rgba(40, 180, 133, .8);
+$color-white: #fff;
+$color-grey: #777;
+$color-black: #000;
 
 @mixin button-hover {
   transform: translateY(-3px);
-  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-  background-color: darken($color-primary, 5%);
+  box-shadow: 0 .5rem 1rem rgba($color-black, .2);
+  background-color: darken($color-white, 5%);
 }
 
 @mixin button-active {
   transform: translateY(-1px);
-  box-shadow: 0 .3rem .7rem rgba(0, 0, 0, .3);
+  box-shadow: 0 .3rem .7rem rgba($color-black, .3);
 }
 
 @mixin background-color($color) {
